# tetherly

./: .gitignore  LICENSE  README.md  pyproject.toml  zensical.toml
.codex/: config.toml  hooks.json
.github/workflows/: docs.yml  publish.yml
docs/: codex-notify-and-approval-notes.md  discord-agent-guide.md  getting-started.md  index.md  security.md
docs/contributing/: claude-code-hooks-internals.md  codex-hooks-internals.md  releasing.md
docs/reference/: agent-send.md  architecture.md  commands.md
docs/user/: agent-replies.md  quickstart.md  security.md  telegram-setup.md  usage.md
src/co_agent/: __init__.py  authz.py  config.py  discord_bot.py  discord_sender.py  main.py  models.py  session_registry.py  setup.py  tmux_service.py
src/tetherly/: __init__.py  authz.py  config.py  discord_bot.py  discord_sender.py  main.py  models.py  session_registry.py  setup.py  telegram_bot.py  telegram_sender.py
tests/: test_authz.py  test_discord_bot.py  test_discord_components.py  test_discord_sender.py  test_main.py  test_registry.py  test_setup.py  test_telegram_bot.py  test_telegram_sender.py  test_tmux_service.py
