[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "co-agent"
version = "0.1.0"
description = "Discord to tmux session bridge for agent-driven workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.5,<3",
]

[project.scripts]
co-agent = "co_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
