[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetherly"
dynamic = ["version"]
description = "Discord and Telegram to tmux session bridge for agent-driven workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "changhyeon363", email = "changhyeon363@gmail.com"},
]
dependencies = [
  "discord.py>=2.5,<3",
  "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
docs = [
  "zensical>=0.0.37,<1",
]

[project.scripts]
tetherly = "tetherly.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. `v0.1.1`).
# Pre-release builds get a dev version like `0.1.1.dev3+gabcdef0`.
